...
    refetch();
  };

  if (isLoading &&pageRef.current === 1) return <LoadingSpinner />;

  return (
    <View style={styles.container} testID='invoice-list'>
      <View style={styles.searchContainer}>
        <Searchbar
          placeholder="Search invoices..."
          onChangeText={handleSearch}
          value={searchQuery}
          style={styles.searchBar}
...
        ListFooterComponent={() => (isLoading &&pageRef.current > 1) ? <LoadingSpinner /> : null}
      />
      <FAB
        icon="plus"
        style={styles.fab}
        onPress={() => navigation.navigate('CreateInvoice')}
        testID='create-invoice-fab'
        />
    </View>
  );
};

const styles = StyleSheet.create({
...
